react-design-system/.nx/cache/terminalOutputs/11038618341416793303
file:///Users/hetame/Develop/React-study/react-design-system/packages/themes/build.js:2
import pkg from "./package.json" assert { type: "json" };
                                 ^^^^^^

SyntaxError: Unexpected identifier 'assert'
[90m    at compileSourceTextModule (node:internal/modules/esm/utils:338:16)[39m
[90m    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:106:18)[39m
[90m    at #translate (node:internal/modules/esm/loader:473:12)[39m
[90m    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:520:27)[39m
[90m    at async ModuleJob._link (node:internal/modules/esm/module_job:115:19)[39m

Node.js v23.7.0
